[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/ball.gd" type="Script" id=1]
[ext_resource path="res://Assets/ball.png" type="Texture" id=2]
[ext_resource path="res://Scenes/TileBreak.gd" type="Script" id=3]
[ext_resource path="res://Scenes/test1.tres" type="Material" id=4]
[ext_resource path="res://paintFiles/grayTrap-crack-Top2.png" type="Texture" id=5]
[ext_resource path="res://paintFiles/grayTrap-crack-Bottom2.png" type="Texture" id=6]
[ext_resource path="res://paintFiles/grayTrap-crack-Top1.png" type="Texture" id=7]
[ext_resource path="res://paintFiles/grayTrap-crack-Bottom1.png" type="Texture" id=8]
[ext_resource path="res://Scenes/white-transp.tres" type="Texture" id=9]

[sub_resource type="PhysicsMaterial" id=5]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=4]
radius = 12.018

[sub_resource type="Curve" id=6]
resource_local_to_scene = true
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
trail_divisor = 20
trail_size_modifier = SubResource( 7 )
flag_disable_z = true
gravity = Vector3( 0, 1, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = ExtResource( 9 )

[node name="Ball" type="RigidBody2D"]
position = Vector2( 512, 480 )
physics_material_override = SubResource( 5 )
gravity_scale = 0.0
linear_velocity = Vector2( 200, -200 )
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
editor/display_folded = true
margin_left = -13.0
margin_top = -13.0
margin_right = 13.0
margin_bottom = 13.0
color = Color( 1, 1, 1, 0 )

[node name="Sprite" type="Sprite" parent="ColorRect"]
position = Vector2( 13, 13 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="TileBreak" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="TileBreak"]

[node name="ShatterEffect4" type="Particles2D" parent="TileBreak"]
show_behind_parent = true
emitting = false
amount = 1
explosiveness = 1.0
local_coords = false
process_material = ExtResource( 4 )
texture = ExtResource( 5 )

[node name="ShatterEffect2" type="Particles2D" parent="TileBreak"]
show_behind_parent = true
emitting = false
amount = 1
explosiveness = 1.0
local_coords = false
process_material = ExtResource( 4 )
texture = ExtResource( 6 )

[node name="ShatterEffect3" type="Particles2D" parent="TileBreak"]
show_behind_parent = true
emitting = false
amount = 1
explosiveness = 1.0
local_coords = false
process_material = ExtResource( 4 )
texture = ExtResource( 7 )

[node name="ShatterEffect" type="Particles2D" parent="TileBreak"]
show_behind_parent = true
emitting = false
amount = 1
explosiveness = 1.0
local_coords = false
process_material = ExtResource( 4 )
texture = ExtResource( 8 )

[node name="trail" type="Particles2D" parent="."]
show_behind_parent = true
amount = 18
lifetime = 4.0
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 2 )
